[package]
name = "rbxcloud"
version = "0.1.0-alpha.5"
description = "CLI for the Roblox Open Cloud APIs"
authors = ["Stephen Leitnick"]
license = "MIT"
repository = "https://github.com/Sleitnick/rbx-cloud-cli"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
base64 = "0.13.0"
clap = { version = "3.2.14", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
md-5 = "0.10.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
termcolor = "1.1.3"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = ["full"] }
