[package]
name = "rbxcloud"
version = "0.2.2"
description = "CLI and SDK for the Roblox Open Cloud APIs"
authors = ["Stephen Leitnick"]
license = "MIT"
repository = "https://github.com/Sleitnick/rbxcloud"
readme = "README.md"
documentation = "https://sleitnick.github.io/rbxcloud/"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
base64 = "0.13.0"
clap = { version = "3.2.14", features = ["derive"] }
md-5 = "0.10.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
